<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/event_content_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_content_defined_name_hint" />

    <EditText
        android:id="@+id/event_content_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_content_name"
        android:hint="@string/event_content_defined_desc_hint" />

    <Button
        android:id="@+id/send_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_content_desc"
        android:text="@string/send_event" />

    <TextView
        android:id="@+id/receive_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_event" />

</RelativeLayout>